tests/snapshots/motion_bounds_test__l_with_count_beyond.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
h[e]llo
