tests/snapshots/motion_bounds_test__open_brace_at_beginning.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[p]ara 1

para 2
