tests/snapshots/motion_bounds_test__open_paren_at_beginning.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[F]irst. Second.
