tests/snapshots/motion_bounds_test__w_multiple_at_end.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
one two thre[e]
