tests/snapshots/motion_bounds_test__w_on_empty_line.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
hello

[w]orld
