tests/snapshots/motion_bounds_test__w_on_whitespace_only.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
    [ ]
