tests/snapshots/motion_bounds_test__w_with_count_beyond_buffer.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
one [t]wo three
